adding theme change

--- a/web/themes/custom/imparables_bb5/templates/content/node--2.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/content/node--2.html.twig
@@ -60,6 +60,8 @@
  */
 #}
 {{ attach_library('bootstrap_barrio/node') }}
+{{ attach_library('imparables_bb5/boostrap_js') }}
+
 
 {%
   set classes = [
@@ -78,57 +80,12 @@
 
     {{ content }}
     
-    <!-- Hero -->
-    <div class="container content-space-1">
-      <div class="row justify-content-md-between align-items-sm-center">
-        
-        <div class="col-8 col-sm-6 col-md-5 mb-5 mb-sm-0">
-          <img class="img-fluid" src="/themes/custom/imparables_bb5/assets/svg/illustrations/oc-growing.svg" alt="Image Description">
-        </div>
-        <!-- End Col -->
 
-        <div class="col-sm-6">
-          <div class="mb-5">
-            <h1 class="display-4 mb-3">
-              Crea tu futuro hoy
-              <br>
-              <span class="text-primary text-highlight-warning">
-                <span class="js-typedjs"
-                      data-hs-typed-options='{
-                        "strings": ["Clases en línea", "Tutoría personalizada", "Metodología innovadora"],
-                        "typeSpeed": 90,
-                        "loop": true,
-                        "backSpeed": 30,
-                        "backDelay": 2500
-                      }'></span>
-              </span>
-            </h1>
-            <p class="lead">Conviértete en un innovador y lider en tecnología con nuestras clases de programación</p>
-          </div>
-
-          <div class="d-grid d-md-flex gap-3 align-items-md-center">
-            <a class="btn btn-primary" href="../page-login.html">Start a free trial</a>
-
-            <!-- Fancybox -->
-            <a class="video-player video-player-btn" href="https://www.youtube.com/watch?v=d4eDWc8g0e0" role="button" data-fslightbox="youtube-video">
-              <span class="video-player-icon shadow-sm me-2">
-                <i class="bi-play-fill"></i>
-              </span>
-              How it works
-            </a>
-            <!-- End Fancybox -->
-          </div>
-        </div>
-        <!-- End Col -->
-      </div>
-      <!-- End Row -->
-    </div>
-    <!-- End Hero -->
 
     <!-- Card Grid -->
-    <div class="content-space-b-2 content-space-b-lg-3 bg-img-start" style="background: url(/themes/custom/imparables_bb5/assets/svg/components/shape-5.svg) center no-repeat;">
+    <div class="content-space-b-1 content-space-b-lg-1 bg-img-start" style="background: url(/themes/custom/imparables_bb5/assets/svg/components/shape-5.svg) center no-repeat;">
       <div class="position-relative">
-        <div class="container content-space-2">
+        <div class="container content-space-1">
           <div class="row align-items-md-center mb-7">
             <div class="col-md-6 mb-4 mb-md-0">
               <h2>Nuestros programas</h2>
