--- a/web/themes/custom/imparables_bb5/templates/layout/page--front.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/page--front.html.twig
@@ -251,7 +251,7 @@
                   <span class="d-none d-lg-inline-block">Sign up</span>
                   <i class="bi-person-fill d-lg-none"></i>
                 </button>-->
-                <a class="btn btn-primary" href="/user/register">Ingresa</a>
+                <a class="btn btn-primary" href="/user/register">Regístrate</a>
               </div>
             {% endif %}
 
@@ -343,12 +343,156 @@
       {% endblock %}
     {% endif %}
     <div id="main-wrapper" class="layout-main-wrapper clearfix">
+
+    <!-- Hero -->
+    <div class="position-relative">
+      <!-- Swiper Main Slider -->
+      <div class="js-swiper-shop-classic-hero swiper">
+        <div class="swiper-wrapper">
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <!-- Container -->
+            <div class="container content-space-t-2">
+              <div class="row justify-content-lg-between align-items-lg-center">
+                
+                <div class="col-8 col-sm-6 col-md-5 mb-5 mb-sm-0">
+                  <img class="img-fluid" src="/themes/custom/imparables_bb5/assets/svg/illustrations/oc-growing.svg" alt="Image Description">
+                </div>
+                <!-- End Col -->
+
+                <div class="col-sm-6">
+                  <div class="mb-5">
+                    <h1 class="display-4 mb-3">
+                      Crea tu futuro hoy
+                      <br>
+                      <span class="text-primary text-highlight-warning">
+                        <span class="js-typedjs"> Holaaa </span>
+                        <!--<span class="js-typedjs"
+                              data-hs-typed-options='{
+                                "strings": ["Clases en línea", "Tutoría personalizada", "Metodología innovadora"],
+                                "typeSpeed": 90,
+                                "loop": true,
+                                "backSpeed": 30,
+                                "backDelay": 2500
+                              }'> </span>-->
+                      </span>
+                    </h1>
+                    <p class="lead">Conviértete en un innovador y lider en tecnología con nuestras clases de programación</p>
+                  </div>
+
+                  <div class="d-grid d-md-flex gap-3 align-items-md-center">
+                    <a class="btn btn-primary" href="../page-login.html">Start a free trial</a>
+
+                    <!-- Fancybox -->
+                    <a class="video-player video-player-btn" href="https://www.youtube.com/watch?v=d4eDWc8g0e0" role="button" data-fslightbox="youtube-video">
+                      <span class="video-player-icon shadow-sm me-2">
+                        <i class="bi-play-fill"></i>
+                      </span>
+                      How it works
+                    </a>
+                    <!-- End Fancybox -->
+                  </div>
+                </div>
+                <!-- End Col -->
+              </div>
+              <!-- End Row -->
+            </div>
+            <!-- End Container -->
+          </div>
+          <!-- End Slide -->
+
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <!-- Container -->
+            <div class="container content-space-t-2">
+              <div class="row justify-content-lg-between align-items-lg-center mb-10">
+                <div class="col-md-6 col-lg-5">
+                  <!-- Heading -->
+                  <div class="mb-5">
+                    <h1>Build awesome apps with your web skills</h1>
+                    <p>Built on standard web technology, teams use Front to build beautiful cross-platform hybrid apps in a fraction of the time.</p>
+                  </div>
+                  <!-- End Title & Description -->
+
+                  <div class="d-grid d-sm-flex gap-3">
+                    <a class="btn btn-primary btn-transition" href="#">Get started</a>
+                    <a class="btn btn-link" href="#">Let's Talk <i class="bi-chevron-right small ms-1"></i></a>
+                  </div>
+
+                  <p class="form-text small">Start free trial. * No credit card required.</p>
+                </div>
+                <!-- End Col -->
+
+                <div class="col-sm-7 col-md-6 d-none d-md-block">
+                  <img class="img-fluid" src="/themes/custom/imparables_bb5/assets/svg/illustrations/oc-relaxing.svg" alt="Image Description">
+                </div>
+                <!-- End Col -->
+              </div>
+              <!-- End Row -->
+
+            </div>
+            <!-- End Container -->
+          </div>
+          <!-- End Slide -->
+
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <!-- Container -->
+            <div class="container content-space-t-2">
+
+
+
+            </div>
+            <!-- End Container -->
+          </div>
+          <!-- End Slide -->
+        </div>
+
+        <!-- Arrows -->
+        <div class="js-swiper-shop-classic-hero-button-next swiper-button-next"></div>
+        <div class="js-swiper-shop-classic-hero-button-prev swiper-button-prev"></div>
+      </div>
+      <!-- End Swiper Main Slider -->
+
+      <!-- Swiper Thumbs Slider -->
+      <div class="position-absolute bottom-0 start-0 end-0 mb-3">
+        <div class="js-swiper-shop-hero-thumbs swiper" style="max-width: 13rem;">
+          <div class="swiper-wrapper">
+            <!-- Slide -->
+            <div class="swiper-slide">
+              <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
+                <!-- <img class="swiper-thumb-progress-avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img11.jpg" alt="Image Description">-->
+              </a>
+            </div>
+            <!-- End Slide -->
+
+            <!-- Slide -->
+            <div class="swiper-slide">
+              <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
+                <!-- <img class="swiper-thumb-progress-avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img14.jpg" alt="Image Description">-->
+              </a>
+            </div>
+            <!-- End Slide -->
+
+            <!-- Slide -->
+            <div class="swiper-slide">
+              <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
+                <!-- <img class="swiper-thumb-progress-avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img15.jpg" alt="Image Description">-->
+              </a>
+            </div>
+            <!-- End Slide -->
+          </div>
+        </div>
+      </div>
+      <!-- End Swiper Thumbs Slider -->
+    </div>
+    <!-- End Hero -->
+
       {% block content %}
-        <div id="main" class="{{ container }} content-space-1">
+        <div id="main" class="{{ container }}">
           {{ page.breadcrumb }}
           <div class="row row-offcanvas row-offcanvas-left clearfix">
               <main{{ content_attributes }}>
-
                 <section class="section">
                   <a href="#main-content" id="main-content" tabindex="-1"></a>
                   {{ page.content }}
