adding nice_login module and fixes on login pages and exporting configurations

--- a/web/themes/custom/imparables_bb5/templates/layout/page--front.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/page--front.html.twig
@@ -251,7 +251,9 @@
                   <span class="d-none d-lg-inline-block">Sign up</span>
                   <i class="bi-person-fill d-lg-none"></i>
                 </button>-->
+                <a class="btn btn-outline-primary" href="/user/login">Ingresa</a>
                 <a class="btn btn-primary" href="/user/register">Regístrate</a>
+                
               </div>
             {% endif %}
 
